plugins {
    id 'java-library'
    id 'org.jetbrains.kotlin.jvm' version '1.5.31'
}

group 'io.vproxy.commons'
version '0.0.1'

repositories {
    mavenCentral()
}

dependencies {
    api group: 'io.vproxy', name: 'vjson', version: '1.4.6'
}

compileJava {
    doFirst {
        options.compilerArgs << '--module-path' << classpath.asPath
    }
    options.compilerArgs << '--add-modules' << [
            'vjson',
            'kotlin.stdlib',
    ].join(',')
    options.compilerArgs += '--add-exports=java.base/jdk.internal.misc=io.vproxy.base'
}

sourceCompatibility = 11.0
targetCompatibility = 11.0

compileKotlin {
    kotlinOptions {
      jvmTarget = '11'
      freeCompilerArgs += '-Xjvm-default=enable'
      freeCompilerArgs += '-Xassertions=jvm'
    }
    destinationDir = compileJava.destinationDir
}
